# drone_2

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  CMakePresets.json  ROADMAP.md  VISION.md  architecture.md
docs/: dds-reader-data-arrival.md  dds-topic-catalog.md  demonstration-runbook.md
docs/decisions/: 0001-toolchain-and-dependencies.md
docs/learning/: 01-fast-dds-toolchain.md  02-build-skeleton.md  03-verification-loop.md  04-domain-participant.md  05-domain-values.md  06-target-track.md  07-drone-state.md  08-control-messages.md  09-explosion-event.md  10-topics-keys-qos.md  11-idl-target-track.md  12-idl-drone-state.md  13-idl-control.md  14-idl-event.md  15-target-mapping.md  16-drone-state-mapping.md  17-control-event-mapping.md  18-participant-lifetime.md  19-first-publish-subscribe.md  20-discovery-and-matching.md  21-observer-ports.md  22-simulated-radar.md  23-observer-publisher.md  24-console-projection.md  25-console-subscriber.md  26-terminal-view.md  27-cross-process-targets.md  28-interceptor-state-machine.md  29-simulated-vehicle.md  30-interceptor-state-publisher.md  31-console-drone-state.md  32-late-joiner-state.md  33-assignment-use-case.md  34-assignment-topic.md  35-interceptor-assignment.md  36-operator-command.md  37-command-topic.md  38-interceptor-target-reader.md  39-pursuit-loop.md  40-moving-target-pursuit.md  (+7 more)
include/drone/application_support/: process_configuration.h  shutdown_monitor.h
include/drone/console_core/: assignment_output_port.h  assignment_use_case.h  drone_projection.h  drone_state_input_port.h  explosion_event_input_port.h  interception_command_output_port.h  interception_command_use_case.h  outcome_projection.h  target_projection.h  target_track_input_port.h
include/drone/console_dds_adapter/: assignment_publisher.h  console_subscriber.h  explosion_event_subscriber.h  interception_command_publisher.h  target_track_subscriber.h
include/drone/console_ui_adapter/: terminal_action.h  terminal_view.h
include/drone/dds_transport/: assignment_mapping.h  assignment_reader.h  assignment_topic.h  assignment_writer.h  domain_participant_owner.h  drone_state_mapping.h  drone_state_reader.h  drone_state_topic.h  drone_state_writer.h  explosion_event_mapping.h  explosion_event_reader.h  explosion_event_topic.h  explosion_event_writer.h  interception_command_mapping.h  interception_command_reader.h  interception_command_topic.h  interception_command_writer.h  target_track_discovery_status.h  target_track_mapping.h  target_track_reader.h  target_track_topic.h  target_track_writer.h
include/drone/domain/: assignment.h  drone_id.h  drone_state.h  explosion_event.h  explosion_event_id.h  interception_command.h  interception_command_id.h  position.h  target_id.h  target_track.h  timestamp.h
include/drone/interceptor_core/: assignment_input_port.h  drone_state_output_port.h  explosion_event_output_port.h  (+6 more)
scripts/: format.sh  run-clang-tidy.sh  run-demonstration.sh
src/application_support/: process_configuration.cpp  shutdown_monitor.cpp
src/console_app/: main.cpp
src/console_core/: assignment_use_case.cpp  drone_projection.cpp  interception_command_use_case.cpp  outcome_projection.cpp  target_projection.cpp
src/console_dds_adapter/: assignment_publisher.cpp  console_subscriber.cpp  explosion_event_subscriber.cpp  interception_command_publisher.cpp  target_track_subscriber.cpp
src/console_ui_adapter/: terminal_action.cpp  terminal_view.cpp
src/drone_dds_transport/: assignment_mapping.cpp  assignment_reader.cpp  assignment_topic.cpp  assignment_writer.cpp  domain_participant_owner.cpp  drone_state_mapping.cpp  drone_state_reader.cpp  drone_state_topic.cpp  drone_state_writer.cpp  explosion_event_mapping.cpp  explosion_event_reader.cpp  explosion_event_topic.cpp  explosion_event_writer.cpp  interception_command_mapping.cpp  interception_command_reader.cpp  interception_command_topic.cpp  interception_command_writer.cpp  target_track_mapping.cpp  target_track_reader.cpp  target_track_topic.cpp  target_track_writer.cpp
src/drone_domain/: assignment.cpp  drone_id.cpp  drone_state.cpp  explosion_event.cpp  explosion_event_id.cpp  interception_command.cpp  interception_command_id.cpp  position.cpp  target_id.cpp  target_track.cpp  timestamp.cpp
src/interceptor_app/: main.cpp
src/interceptor_core/: interceptor_state_machine.cpp
src/interceptor_dds_adapter/: assignment_subscriber.cpp  drone_state_publisher.cpp  explosion_event_publisher.cpp  interception_command_subscriber.cpp  target_track_subscriber.cpp
src/observer_app/: main.cpp
src/observer_core/: target_tracker.cpp
src/observer_dds_adapter/: target_track_publisher.cpp
src/simulated_radar_adapter/: simulated_radar.cpp
src/simulated_vehicle_adapter/: simulated_vehicle.cpp
tests/: assignment_dds_adapter_test.cpp  console_core_test.cpp  console_dds_adapter_test.cpp  console_outcome_dds_adapter_test.cpp  console_ui_adapter_test.cpp  control_event_mapping_test.cpp  control_messages_test.cpp  control_wire_types_test.cpp  cpp26_build_probe.cpp  domain_participant_owner_test.cpp  domain_participant_smoke_test.cpp  domain_values_test.cpp  drone_state_mapping_test.cpp  drone_state_test.cpp  drone_state_wire_type_test.cpp  end_to_end_interception_process_test.cpp  explosion_event_dds_adapter_test.cpp  explosion_event_test.cpp  explosion_event_wire_type_test.cpp  interception_command_dds_adapter_test.cpp  interceptor_core_test.cpp  interceptor_publisher_process_test.cpp  interceptor_target_dds_adapter_test.cpp  late_joiner_drone_state_process_test.cpp  live_system_state_process_test.cpp  moving_target_pursuit_process_test.cpp  observer_console_process_test.cpp  observer_core_test.cpp  observer_publisher_process_test.cpp  process_lifecycle_test.cpp  process_test_support.cpp  process_test_support.h  qos_experiments_test.cpp  run_clang_tidy_script_test.sh  run_demonstration_script_test.sh  simulated_radar_adapter_test.cpp  simulated_vehicle_adapter_test.cpp  target_track_discovery_test.cpp  target_track_mapping_test.cpp  target_track_pub_sub_test.cpp  (+4 more)
(+13 files in other folders)
